@@ -97,6 +97,15 @@ ConfDialog::ConfDialog( CHtmlSysWinGroupQt* parent )
 	ui->inputFontItalicCheckBox->setChecked(sett->inputFont.italic());
 	ui->inputFontBoldCheckBox->setChecked(sett->inputFont.bold());
 
+	switch (sett->ioSafetyLevel) {
+	  case 0: ui->safety0RadioButton->setChecked(true); break;
+	  case 1: ui->safety1RadioButton->setChecked(true); break;
+	  case 2: ui->safety2RadioButton->setChecked(true); break;
+	  case 3: ui->safety3RadioButton->setChecked(true); break;
+	  case 4: ui->safety4RadioButton->setChecked(true); break;
+	  default: ui->safety2RadioButton->setChecked(true); break;
+	}
+
 	const QList<QByteArray>& aliases = QTextCodec::availableCodecs();
 	QList<QByteArray> codecs;
 	for (int i = 0; i < aliases.size(); ++i) {
@@ -210,6 +219,17 @@ ConfDialog::fMakeInstantApply()
 	connect(ui->linkHoveringColorButton, SIGNAL(changed(QColor)), this, SLOT(fApplySettings()));
 	connect(ui->linkClickedColorButton, SIGNAL(changed(QColor)), this, SLOT(fApplySettings()));
 
+	// Because these are radio buttons, we connect the clicked() instead of
+	// the toggled() signal.  The toggled() signal would result in the slot
+	// getting called twice, once for the button that gets unchecked and once
+	// for the button that gets checked.  The clicked() signal is only emitted
+	// when a button gets checked.
+	connect(ui->safety0RadioButton, SIGNAL(clicked()), this, SLOT(fApplySettings()));
+	connect(ui->safety1RadioButton, SIGNAL(clicked()), this, SLOT(fApplySettings()));
+	connect(ui->safety2RadioButton, SIGNAL(clicked()), this, SLOT(fApplySettings()));
+	connect(ui->safety3RadioButton, SIGNAL(clicked()), this, SLOT(fApplySettings()));
+	connect(ui->safety4RadioButton, SIGNAL(clicked()), this, SLOT(fApplySettings()));
+
 	connect(ui->encodingComboBox, SIGNAL(currentIndexChanged(int)), this, SLOT(fApplySettings()));
 	connect(ui->askForGameFileCheckBox, SIGNAL(toggled(bool)), this, SLOT(fApplySettings()));
 }
@@ -269,6 +289,17 @@ ConfDialog::fApplySettings()
 	sett->writerFont.setPointSize(ui->writerFontSizeSpinBox->value());
 	sett->inputFont.setPointSize(ui->inputFontSizeSpinBox->value());
 
+	if (ui->safety0RadioButton->isChecked()) {
+		sett->ioSafetyLevel = 0;
+	} else if (ui->safety1RadioButton->isChecked()) {
+		sett->ioSafetyLevel = 1;
+	} else if (ui->safety2RadioButton->isChecked()) {
+		sett->ioSafetyLevel = 2;
+	} else if (ui->safety3RadioButton->isChecked()) {
+		sett->ioSafetyLevel = 3;
+	} else if (ui->safety4RadioButton->isChecked()) {
+		sett->ioSafetyLevel = 4;
+	}
 	sett->tads2Encoding = ui->encodingComboBox->currentText().toAscii();
 	sett->askForGameFile = ui->askForGameFileCheckBox->isChecked();
 
