@@ -79,6 +79,7 @@ Settings::loadFromDisk()
 	sett.endGroup();
 
 	sett.beginGroup(QString::fromAscii("misc"));
+	this->ioSafetyLevel = sett.value(QString::fromAscii("ioSafetyLevel"), 2).toInt();
 	this->tads2Encoding = sett.value(QString::fromAscii("tads2encoding"), QByteArray("windows-1252")).toByteArray();
 	this->askForGameFile = sett.value(QString::fromAscii("askforfileatstart"), false).toBool();
 	this->lastFileOpenDir = sett.value(QString::fromAscii("lastFileOpenDir"), QString::fromAscii("")).toString();
@@ -138,6 +139,7 @@ Settings::saveToDisk()
 	sett.endGroup();
 
 	sett.beginGroup(QString::fromAscii("misc"));
+	sett.setValue(QString::fromAscii("ioSafetyLevel"), this->ioSafetyLevel);
 	sett.setValue(QString::fromAscii("tads2encoding"), this->tads2Encoding);
 	sett.setValue(QString::fromAscii("askforfileatstart"), this->askForGameFile);
 	sett.setValue(QString::fromAscii("lastFileOpenDir"), this->lastFileOpenDir);
